@@ -1,3 +1,8 @@
+Sun Jul  3 06:04:09 2016  Eric Wong  <e@80x24.org>
+
+	* process.c (disable_child_handler_fork_child): simplify
+	  [ruby-core:75781] [Misc #12439]
+
 Sun Jul  3 05:25:46 2016  Eric Wong  <e@80x24.org>
 
 	* tool/asm_parse.rb: add description
